--- a/.env
+++ b/.env
@@ -5,3 +5,6 @@ SECRET_KEY_ONE=thisisasecretcookiekey
 SECRET_KEY_TWO=thisisanothersecretcookiekey
 CLIENT_URL=http://localhost:3000
 REDIS_HOST=redis://localhost:6379
+CLOUD_NAME=image-gozalbes
+CLOUD_API_KEY=171575622512274
+CLOUD_API_SECRET=MVb_fqU9mjk5ZyrfGuGT9bBtmpg
