--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "",
   "main": "app.js",
   "scripts": {
+    "dev": "nodemon -r tsconfig-paths/register src/app.ts ",
+    "start": "nodemon ./build/app.js",
+    "build": "t  tsc -p .",
     "lint:check": "eslint \"./src/**/*.ts\"",
     "lint:fix": "eslint \"./src/**/*.ts\" --fix",
     "prettier:check": "prettier --check \"./src/**/*.{ts,json}\"",
     "prettier:fix": "prettier --write \"./src/**/*.{ts,json}\"",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon -r tsconfig-paths/register src/app.ts | ./node_modules/.bin/bunyan"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -24,7 +26,9 @@
   "homepage": "https://github.com/CarlosGozalbes/socialApp-backend#readme",
   "dependencies": {
     "@socket.io/redis-adapter": "^8.0.0",
+    "bcryptjs": "^2.4.3",
     "bunyan": "^1.8.15",
+    "cloudinary": "^1.33.0",
     "compression": "^1.7.4",
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
@@ -34,19 +38,27 @@
     "helmet": "^6.0.1",
     "hpp": "^0.2.3",
     "http-status-codes": "^2.2.0",
+    "joi": "^17.7.0",
+    "jsonwebtoken": "^9.0.0",
+    "lodash": "^4.17.21",
     "mongoose": "^6.8.1",
     "redis": "^4.5.1",
     "socket.io": "^4.5.4",
     "swagger-stats": "^0.99.4",
-    "typescript": "^4.9.4"
+    "ttypescript": "^1.5.15",
+    "typescript": "^4.9.4",
+    "typescript-transform-paths": "^3.4.4"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/bunyan": "^1.8.8",
     "@types/compression": "^1.7.2",
     "@types/cookie-session": "^2.0.44",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
     "@types/hpp": "^0.2.2",
+    "@types/jsonwebtoken": "^9.0.0",
+    "@types/lodash": "^4.14.191",
     "@types/swagger-stats": "^0.95.6",
     "@typescript-eslint/eslint-plugin": "^5.47.0",
     "@typescript-eslint/parser": "^5.47.0",
